# llm-lambda

./: .gitignore  README.md  llm_lambda.py  pyproject.toml
